# arkworks-study

./: Cargo.toml
src/: lib.rs
src/circuits/: elgamal.rs  if_1.rs  if_2.rs  mod.rs  multiply.rs  multiply_v2.rs
src/gadgets/: mod.rs
src/gadgets/public_encryptions/: constraints.rs  mod.rs
src/gadgets/public_encryptions/elgamal/: constraints.rs  mod.rs
