[package]
name = "arkworks-study"
Authors = "cjk2889@gmail.com"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bn254 = "0.4.0"
ark-crypto-primitives = {version = "0.4.0", default-features = true, features = [ "r1cs", "encryption" ]}
ark-ec = "0.4.2"
ark-ed-on-bn254 = {version = "^0.4.0", features = [ "r1cs" ]}
ark-ff = "0.4.2"
ark-groth16 = "0.4.0"
ark-poly = "0.4.2"
ark-r1cs-std = "0.4.0"
ark-relations = "0.4.0"
ark-serialize = "0.4.2"
ark-std = "0.4.0"

rand = "0.8.5"
